--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container{
+  color: black;
+  padding: 50px;
+  background-color: aqua;
+  
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Heading{
+  color: red;
+  font-size: 100px;
+  font-style: italic;
+}
+.card{
+  width: 500px;
+  padding: 30px;
+  margin: 50px;
+  background-position-x: center;
+  
+}
+.container.row{
+box-sizing: content-box;
+}
+.card-body{
+  background-color: bisque;
+  background-position-x: center;
 }
